Update all individual app workflows to use correct DockerHub namespace

--- a/task-management-app/.github/workflows/ci-cd.yml
+++ b/task-management-app/.github/workflows/ci-cd.yml
@@ -9,9 +9,9 @@ on:
     types: [ published ]
 
 env:
-  REGISTRY: ghcr.io
-  BACKEND_IMAGE: ${{ github.repository }}/backend
-  FRONTEND_IMAGE: ${{ github.repository }}/frontend
+  REGISTRY: docker.io
+  BACKEND_IMAGE: task-management-backend
+  FRONTEND_IMAGE: task-management-frontend
 
 jobs:
   # Security scanning and code quality
@@ -94,6 +94,15 @@ jobs:
         version: latest
         working-directory: ./backend
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Build backend binary
       working-directory: ./backend
       run: |
@@ -106,8 +115,8 @@ jobs:
         context: ./backend
         push: true
         tags: |
-          ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE }}:latest
-          ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE }}:${{ github.sha }}
+          ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.BACKEND_IMAGE }}:latest
+          ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.BACKEND_IMAGE }}:${{ github.sha }}
         labels: |
           org.opencontainers.image.source=https://github.com/${{ github.repository }}
           org.opencontainers.image.revision=${{ github.sha }}
@@ -145,8 +154,8 @@ jobs:
         context: ./frontend
         push: true
         tags: |
-          ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE }}:latest
-          ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE }}:${{ github.sha }}
+          ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.FRONTEND_IMAGE }}:latest
+          ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.FRONTEND_IMAGE }}:${{ github.sha }}
         labels: |
           org.opencontainers.image.source=https://github.com/${{ github.repository }}
           org.opencontainers.image.revision=${{ github.sha }}
