Add HashiCorp Vault learning infrastructure and comprehensive portfolio documentation
- Add public Vault setup for enterprise secret management practice
- Include interactive setup script with multiple application support
- Create comprehensive .env.example files for all applications
- Add professional portfolio documentation for DevOps/SRE roles
- Separate private development data from public learning infrastructure
- Enable users to practice with HashiCorp Vault using their own secrets

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,17 @@ Thumbs.db
 *secret*
 *Secret*
 
+# PRIVATE FILES - YOUR PERSONAL DATA ONLY (NOT PUBLIC INFRASTRUCTURE)
+docker-compose.personal.yml
+vault-data/
+vault-secrets-summary.txt
+vault-setup-summary.md
+VAULT-CONFIGURATION-SUMMARY.md
+configurations/
+.vault-token
+personal-vault-*
+*-personal.*
+
 # Temporary and backup files - CRITICAL CLEANUP
 *.tmp
 *.temp
