--- a/ecommerce-app/docker-compose.yml
+++ b/ecommerce-app/docker-compose.yml
@@ -48,19 +48,19 @@ services:
     container_name: ecommerce-backend
     restart: unless-stopped
     environment:
-      NODE_ENV: development
-      PORT: 5000
-      MONGODB_URI: mongodb://mongodb:27017/ecommerce
+      NODE_ENV: ${NODE_ENV:-development}
+      PORT: ${PORT:-5000}
+      MONGODB_URI: mongodb://mongodb:27017/${DB_NAME:-ecommerce}
       REDIS_HOST: redis
       REDIS_PORT: 6379
-      REDIS_PASSWORD: redis_password
-      JWT_SECRET: super_secret_jwt_key
-      JWT_EXPIRE: 30d
-      STRIPE_SECRET_KEY: sk_test_your_stripe_key
-      EMAIL_HOST: smtp.gmail.com
-      EMAIL_PORT: 587
-      EMAIL_USER: your_email@gmail.com
-      EMAIL_PASS: your_app_password
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password}
+      JWT_SECRET: ${JWT_SECRET:-change-this-jwt-secret-in-production}
+      JWT_EXPIRE: ${JWT_EXPIRE:-30d}
+      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+      EMAIL_HOST: ${EMAIL_HOST:-smtp.gmail.com}
+      EMAIL_PORT: ${EMAIL_PORT:-587}
+      EMAIL_USER: ${EMAIL_USER}
+      EMAIL_PASS: ${EMAIL_PASS}
     ports:
       - "5001:5000"
     depends_on:
