--- a/ecommerce-app/backend/package.json
+++ b/ecommerce-app/backend/package.json
@@ -21,7 +21,12 @@
     "mongoose": "^7.5.0",
     "multer": "^2.0.2",
     "nodemailer": "^6.9.4",
-    "stripe": "^13.4.0"
+    "stripe": "^13.4.0",
+    "socket.io": "^4.7.2",
+    "redis": "^4.6.7",
+    "node-cron": "^3.0.2",
+    "compression": "^1.7.4",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "jest": "^29.6.2",
