--- a/ecommerce-app/frontend/package.json
+++ b/ecommerce-app/frontend/package.json
@@ -21,7 +21,15 @@
     "react-image-gallery": "^1.3.0",
     "react-loading-skeleton": "^3.3.1",
     "js-cookie": "^3.0.5",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "recharts": "^2.8.0",
+    "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
+    "react-virtualized": "^9.22.5",
+    "react-intersection-observer": "^9.5.2",
+    "framer-motion": "^10.16.1",
+    "react-select": "^5.7.4",
+    "react-datepicker": "^4.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
