Enhance educational platform testing with visual progress tracking and fix documentation consistency

--- a/educational-platform/backend/src/main/resources/application.properties
+++ b/educational-platform/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Configuration
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/educational_platform}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://postgres:5432/educational_platform}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres123}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
@@ -32,10 +32,10 @@ spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.enabled=true
 
 # Email Configuration (for notifications)
-spring.mail.host=${EMAIL_HOST:smtp.gmail.com}
-spring.mail.port=${EMAIL_PORT:587}
-spring.mail.username=${EMAIL_USERNAME:your-email@gmail.com}
-spring.mail.password=${EMAIL_PASSWORD:your-app-password}
+spring.mail.host=${MAIL_HOST:smtp.sendgrid.net}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:apikey}
+spring.mail.password=${MAIL_PASSWORD:placeholder-get-from-sendgrid}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -57,18 +57,20 @@ spring.validation.add-validation-group=true
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=when-authorized
 management.health.mail.enabled=false
+management.health.redis.enabled=false
 
-# Redis Configuration (for caching) - Temporarily disabled
-#spring.redis.host=${REDIS_HOST:localhost}
-#spring.redis.port=${REDIS_PORT:6379}
-#spring.redis.timeout=2000ms
-#spring.redis.jedis.pool.max-active=8
-#spring.redis.jedis.pool.max-idle=8
-#spring.redis.jedis.pool.min-idle=0
+# Redis Configuration (for caching)
+spring.redis.host=${SPRING_REDIS_HOST:redis}
+spring.redis.port=${SPRING_REDIS_PORT:6379}
+spring.redis.password=${SPRING_REDIS_PASSWORD:}
+spring.redis.timeout=2000ms
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.min-idle=0
 
-# Cache Configuration - Using simple cache instead of Redis temporarily
-spring.cache.type=simple
-#spring.cache.redis.time-to-live=600000
+# Cache Configuration - Using Redis for caching
+spring.cache.type=redis
+spring.cache.redis.time-to-live=600000
 
 # API Documentation Configuration
 springdoc.api-docs.path=/api-docs
