--- a/medical-care-system/k8s/frontend-deployment.yaml
+++ b/medical-care-system/k8s/frontend-deployment.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app: medical-care-frontend
     component: frontend
+    version: v1.0.0
 spec:
   replicas: 2
   selector:
@@ -16,36 +17,45 @@ spec:
       labels:
         app: medical-care-frontend
         component: frontend
+        version: v1.0.0
     spec:
       containers:
       - name: medical-care-frontend
         image: medical-care-frontend:latest
         ports:
-        - containerPort: 80
+        - containerPort: 5171
           name: http
+        env:
+        - name: API_BASE_URL
+          value: "http://medical-care-api"
         resources:
           requests:
-            memory: "64Mi"
-            cpu: "50m"
+            memory: "128Mi"
+            cpu: "100m"
           limits:
-            memory: "256Mi"
-            cpu: "200m"
+            memory: "512Mi"
+            cpu: "300m"
         livenessProbe:
           httpGet:
             path: /
-            port: 80
+            port: 5171
           initialDelaySeconds: 30
-          periodSeconds: 10
+          periodSeconds: 30
+          timeoutSeconds: 10
+          failureThreshold: 3
         readinessProbe:
           httpGet:
             path: /
-            port: 80
-          initialDelaySeconds: 5
-          periodSeconds: 5
+            port: 5171
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
           runAsUser: 101
+          readOnlyRootFilesystem: false
           capabilities:
             drop:
             - ALL
