--- a/medical-care-system/k8s/backend-service.yaml
+++ b/medical-care-system/k8s/backend-service.yaml
@@ -6,11 +6,13 @@ metadata:
   labels:
     app: medical-care-api
     component: backend
+    version: v1.0.0
 spec:
   selector:
     app: medical-care-api
   ports:
   - name: http
     port: 80
-    targetPort: 8080
+    targetPort: 5170
+    protocol: TCP
   type: ClusterIP
