--- a/medical-care-system/k8s/frontend-service.yaml
+++ b/medical-care-system/k8s/frontend-service.yaml
@@ -6,11 +6,13 @@ metadata:
   labels:
     app: medical-care-frontend
     component: frontend
+    version: v1.0.0
 spec:
   selector:
     app: medical-care-frontend
   ports:
   - name: http
     port: 80
-    targetPort: 80
+    targetPort: 5171
+    protocol: TCP
   type: LoadBalancer
