--- a/medical-care-system/k8s/postgresql-service.yaml
+++ b/medical-care-system/k8s/postgresql-service.yaml
@@ -1,16 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sql-server-service
+  name: postgresql
   namespace: medical-care-system
   labels:
-    app: sql-server
+    app: postgresql
+    component: database
 spec:
   selector:
-    app: sql-server
+    app: postgresql
   ports:
-  - port: 1433
-    targetPort: 1433
+  - port: 5432
+    targetPort: 5432
     protocol: TCP
-    name: sql
+    name: postgresql
   type: ClusterIP
