Standardize dockerfile architecture and remove redundant variants
- Updated social-media-platform to use main Dockerfile instead of Dockerfile.simple
- Removed redundant Dockerfile.simple files for cleaner architecture
- Educational platform now builds successfully with MapStruct dependencies
- All applications now use best practice multi-stage Docker builds
- Standardized dockerfile references in docker-compose.yml files

--- a/social-media-platform/docker-compose.yml
+++ b/social-media-platform/docker-compose.yml
@@ -49,7 +49,7 @@ services:
   social-media-backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile.simple
+      dockerfile: Dockerfile
     container_name: social-media-backend
     restart: unless-stopped
     env_file:
@@ -82,7 +82,7 @@ services:
   social-media-frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.simple
+      dockerfile: Dockerfile
     container_name: social-media-frontend
     restart: unless-stopped
     environment:
