Fix Social Media Platform frontend build configuration
- Updated package.json to use correct npx expo export:web command
- Fixed app.json webpack bundler configuration
- Added missing assets (favicon, icon, splash, notification-icon, adaptive-icon)
- Removed expo-router dependency to avoid static export conflicts
- 5/6 applications now successfully deployed and running
- Social Media Platform frontend build in progress

--- a/social-media-platform/frontend/app.json
+++ b/social-media-platform/frontend/app.json
@@ -6,6 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
+    "entryPoint": "./index.js",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -27,15 +28,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "bundler": "webpack",
-      "output": "static",
-      "build": {
-        "babel": {
-          "include": [
-            "@expo/vector-icons"
-          ]
-        }
-      }
+      "bundler": "webpack"
     },
     "plugins": [
       [
@@ -58,9 +51,6 @@
           "cameraPermission": "Allow access to camera for taking photos."
         }
       ]
-    ],
-    "experiments": {
-      "typedRoutes": true
-    }
+    ]
   }
 }
