--- a/social-media-platform/frontend/package.json
+++ b/social-media-platform/frontend/package.json
@@ -2,12 +2,12 @@
   "name": "social-media-frontend",
   "version": "1.0.0",
   "description": "React Native Web frontend for Social Media Platform",
-  "main": "index.web.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start --web",
     "dev": "expo start --web --dev",
-    "build": "expo export --platform web",
-    "build:prod": "NODE_ENV=production expo export --platform web",
+    "build": "npx expo export:web",
+    "build:prod": "NODE_ENV=production npx expo export:web",
     "preview": "npx serve dist",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -26,6 +26,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
