Fix Social Media Platform React Native Web build and deployment

--- a/social-media-platform/frontend/Dockerfile
+++ b/social-media-platform/frontend/Dockerfile
@@ -20,7 +20,7 @@ RUN npm run build
 FROM nginx:alpine
 
 # Copy built application from builder stage
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/web-build /usr/share/nginx/html
 
 # Create nginx configuration
 RUN echo 'server { \
