--- a/social-media-platform/frontend/app.json
+++ b/social-media-platform/frontend/app.json
@@ -28,7 +28,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "bundler": "webpack"
+      "bundler": "webpack",
+      "output": "static"
     },
     "plugins": [
       [
