--- a/ecommerce-app/Dockerfile
+++ b/ecommerce-app/Dockerfile
@@ -5,7 +5,7 @@
 FROM node:18-alpine AS frontend-builder
 WORKDIR /app/frontend
 COPY frontend/package*.json ./
-RUN npm ci --only=production
+RUN npm install --only=production
 COPY frontend/ ./
 RUN npm run build
 
@@ -13,7 +13,7 @@ RUN npm run build
 FROM node:18-alpine AS backend-builder
 WORKDIR /app/backend
 COPY backend/package*.json ./
-RUN npm ci --only=production
+RUN npm install --only=production
 COPY backend/ ./
 
 # Stage 3: Production Runtime
@@ -34,7 +34,7 @@ COPY --from=backend-builder --chown=nodejs:nodejs /app/backend ./
 COPY --from=frontend-builder --chown=nodejs:nodejs /app/frontend/dist ./public
 
 # Install production dependencies only
-RUN npm ci --only=production && npm cache clean --force
+RUN npm install --only=production && npm cache clean --force
 
 # Security: Remove unnecessary packages
 RUN apk del npm
