--- a/weather-app/Dockerfile
+++ b/weather-app/Dockerfile
@@ -5,7 +5,7 @@
 FROM node:18-alpine AS frontend-builder
 WORKDIR /app/frontend
 COPY frontend/package*.json ./
-RUN npm ci --only=production
+RUN npm ci --omit=dev
 COPY frontend/ ./
 RUN npm run build
 
