Fix Docker build issues for all applications
- Fix npm commands to use standard 'npm install' instead of problematic npm ci flags
- Ensure all React applications have proper public/index.html files
- Fix weather-app npm dependencies for production builds
- Update all Dockerfiles for compatibility with GitHub Actions runners

--- a/ecommerce-app/backend/Dockerfile
+++ b/ecommerce-app/backend/Dockerfile
@@ -14,7 +14,7 @@ RUN apk add --no-cache curl
 COPY package*.json ./
 
 # Install production dependencies
-RUN npm install --omit=dev && npm cache clean --force
+RUN npm install --production && npm cache clean --force
 
 # Copy application code
 COPY . .
