--- a/ecommerce-app/frontend/Dockerfile
+++ b/ecommerce-app/frontend/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install --omit=dev
+RUN npm install --production
 
 # Copy source code
 COPY . .
