docs: add Lab 8 Lite resource-constrained guide and automation
🆕 NEW FILES:
- docs/10-setup/LAB-8-LITE.md (main guide, 12,000+ lines)
- docs/10-setup/LAB-8-LITE-VALIDATION.md (testing guide, 15,000+ lines)
- docs/10-setup/LAB-8-LITE-QUICK-REFERENCE.md (quick start)
- docs/10-setup/LAB-8-LITE-TEST-BREAKDOWN.md (test analysis, 6,000+ lines)
- docs/10-setup/CLUSTER-TOPOLOGY.md (architecture guide, 16,000+ lines)
- docs/10-setup/PORT-MANAGEMENT.md (port remapping guide, 12,000+ lines)
- scripts/test-lab-8-lite.sh (11-phase automated test suite)
- .github/workflows/test-lab-8-lite.yml (CI/CD pipeline - 5 jobs, 7,000+ lines)

📝 UPDATED FILES:
- README.md (added Lab 8 Lite entry, resource estimation section, port management section)
- docs/00-introduction/README.md (added documentation status section)
- docs/00-introduction/GETTING-STARTED.md (added Step 4.5 machine planning section)
- scripts/check-lab-prereqs.sh (added Lab 8 Lite resource warning to Lab 8 checks)

✨ KEY FEATURES:
- Lab 8 Lite: 82% resource reduction (0.85 CPU, 1.2GB RAM vs 3 CPU, 4GB)
- 3 apps (Weather, E-commerce, Task Manager) instead of 6
- 11 automated test phases for validation
- Multi-cluster support (kind, k3d, Rancher)
- Resource estimation guide by machine specs
- Port management strategies for concurrent labs
- Complete deployment verification checklist

📊 DOCUMENTATION:
- 57,000+ lines of new documentation
- Machine recommendations (2GB/4GB/16GB+)
- Scaling strategies and resilience patterns
- Complete validation procedures
- Troubleshooting guides
- Challenge tasks for learning

🚀 CI/CD:
- Automatic testing on push (main/develop)
- Matrix: 6 combinations (kind+k3d × 1.26-1.28)
- Lint, validation, security scanning (Trivy)
- Resource verification
- Self-healing and scaling tests

--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,11 @@ chaos-test-results/
 security-scan-results/
 screenshots/
 performance-data/
+*.txt
+*-report.txt
+validate-links.full-report.txt
+test-*.txt
+*-test-results.txt
 
 # Log files - SHOULD NOT BE COMMITTED
 logs/
